# Thesis_University

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  Ros_readme.md  check_cuda.py  detect  detect.py  export_onnx.py  export_tensorRT.py  getdata.py  requirements.txt  test.py  test111  thesis-train-all.ipynb  thesis.ipynb  train-1.ipynb  train_new_model
c++/: .gitignore  CMakeLists.hostpc.md  CMakeLists.txt  CMakeLists_simple.txt  Makefile  README.md  README_PERFORMANCE.md  build_python.md  config.json  fix_lib.md  jetson.md  main.cpp  running.md  test_performance.cpp
c++/bytetrack/include/: STrack.h  dataType.h  kalmanFilter.h
c++/bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
c++/include/: Detect.h  EgoVehicle.h  FrontDistanceEstimator.h  LaneDetector.hpp  app.h  config.h  header.hpp  process.h  process.hpp  utils.hpp
c++/include/calculator/: calc.cpp  calc.h
c++/include/common/: common.h  config.h
c++/include/followdist/: FrontDistanceEstimator.cpp
c++/include/lanevision/: LaneDetector.cpp  LaneDetector.h
c++/include/libfollowdist/: FrontDistanceEstimator.cpp  FrontDistanceEstimator.h
c++/include/tensorrt/: logging.h
c++/src/: Detect.cpp  Detect.h  EgoVehicle.cpp  LaneDetector.cpp  common.h  config.cpp  main.cpp  preprocess.cu  preprocess.h  process.cpp  utils.cpp
c++/tests/: test.cpp
notebooks/: thesis-train-all.ipynb  train.ipynb
prediction/: AdvancedLaneDetector.py  LaneDetector.py  detect.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml  results.csv
services/: .gitignore  Makefile  requirements.txt  running.md
services/prediction/: AdvancedLaneDetector.py  LaneDetector.py  ObjectDetector.py  check_edge.py  detect.py  detection.py  video_check_edge.py
services/tool/: Makefile  auto_annotation_append.py  auto_annotation_video.py  auto_anotation.py  auto_anotation_video.py  check_input.py  classes.txt  coco.yaml  cookies.txt  create_to_import_cvat.py  cut_video.md  data.yaml  extract_frames.sh  filter_data.py  frame_1666.json  go.mod  main  main.go  reclass.py  remap.py  rename_dataset.py  train_val_split.py  video_insalled.md
services/tool/annotation/: frame_1656.json
services/tool/image_test_train/: frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json
services/train_test/: data.yaml  export_tensorRT.py  read_video.py
tool/: check_cuda.py  cut_video.md
train/: requirements.txt  train.py
train_test/: create_data_yaml.py  cut_video.md  load_image.py  test3.py  train.py  train_val_split.py
